fix: scrollbar css

--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -14,6 +14,17 @@
     overflow: hidden;
 }
 
+.eventReportsApp ::-webkit-scrollbar {
+    width: 7px;
+}
+.eventReportsApp ::-webkit-scrollbar-track {
+    background: #fafafa;
+}
+.eventReportsApp ::-webkit-scrollbar-thumb {
+    background: #d1d1d1;
+    border-radius: 3px;
+}
+
 .flexCt {
     display: flex;
 }
